# Tickets

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
Documentation/: README_ARQUITETURA.md  RESUMO_EXECUTIVO.md
config/: ETAPA3_README.md
docs/: DIAGRAMAS_ARQUITETURA.md  ETAPA2_README.md  ETAPA4_README.md  INDICE_DOCUMENTACAO.md  MELHORIAS_ARQUITETURAIS.md  UoW_DI_ARQUITETURA.md
scripts/: quick_setup.py  setup_database.sh
src/: __init__.py
src/adapters/django_app/events/: handlers.py  publishers.py
src/adapters/django_app/shared/: database.py  repository.py  unit_of_work.py
src/adapters/django_app/tickets/: admin.py  api_views.py  apps.py  forms.py  mappers.py  models.py  repositories.py  urls.py  views.py
src/adapters/django_app/tickets/migrations/: 0001_initial.py
src/config/: __init__.py  celery.py  container.py  settings.py  urls.py  wsgi.py
src/core/: __init__.py
src/core/shared/: __init__.py  events.py  exceptions.py  interfaces.py
src/core/tickets/: __init__.py  dtos.py  entities.py  events.py  ports.py  use_cases.py
templates/: base.html
templates/includes/: prioridade_badge.html  status_badge.html
templates/tickets/: create.html  dashboard.html  detail.html  list.html  not_found.html
tests/: __init__.py  conftest.py
tests/adapters/django_app/: conftest.py  test_integration.py  test_views.py
tests/core/tickets/: test_entities.py  test_use_cases.py
tests/integration/: test_full_integration.py
