# =============================================================================
# TechSupport Manager - Configuração de Ferramentas
# =============================================================================

[metadata]
name = techsupport-manager
version = attr: src.__version__
description = Sistema de Gerenciamento de Suporte Técnico
long_description = file: README.md
long_description_content_type = text/markdown
author = TechSupport Team
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = .
include = src*

[flake8]
max-line-length = 88
extend-ignore = E203, E501, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    migrations,
    *.egg-info

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

[coverage:run]
source = src
branch = True
omit =
    */tests/*
    */__init__.py

[coverage:report]
show_missing = True
fail_under = 80
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
